--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -14,7 +14,7 @@
             <i class="fa-solid fa-house"></i>
             <div class="nav-hidden">Home</div>
         </div>
-        <div class="nav-list" onclick="NavTo(this)">
+        <div class="nav-list" onclick="NavTo(this)" id="test">
             <i class="fa-solid fa-user-plus"></i>
             <div class="nav-hidden">Pasien Baru</div>
         </div>
