--- a/html/newRegister.html
+++ b/html/newRegister.html
@@ -1,8 +1,15 @@
 <div class="newReg-container">
-    <div class="newReg-card">
+    <form class="newReg-card" id="newReg-card" onsubmit="return false">
         <button class="home-modal-close" onclick="closeNewPatientModal()"><i class="fa-solid fa-xmark"></i></button>
         <div class="newReg-header">
             Register Pasien Baru
+        </div>
+        <div class="newReg-btn-group">
+            <button type="submit" class="newReg-simpan btn btn-primary" onclick="newReg_Simpan('antri')">Simpan &
+                Antri</button>
+            <button type="submit" class="newReg-simpan btn btn-primary" onclick="newReg_Simpan()">Simpan</button>
+            <button class="newReg-simpan btn btn-danger" onclick="NewPatient()">Reset</button>
+            <button class="newReg-simpan btn btn-danger" onclick="">Delete</button>
         </div>
         <div class="newReg-body-container">
             <div class="newReg-body">
@@ -11,26 +18,27 @@
                         <label for="newReg-norm" class="form-label">Nomor RM</label>
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="00-a-0000" aria-label="Nomor RM"
-                                oninput="reMasking(this, 'noRM')" aria-describedby="basic-addon1">
-                            <button class="input-group-text btn btn-primary" id="">Generate</button>
+                                autocomplete="off" id="newReg-norm" oninput="reMasking(this, 'noRM')">
+                            <button class="input-group-text btn btn-primary" id=""
+                                onclick="newReg_generateRM()">Generate</button>
                         </div>
                     </div>
                 </div>
                 <div class="row m-0">
                     <div class="col-md-6 col-12">
                         <label for="newReg-nama" class="form-label">Nama Lengkap</label>
-                        <input type="text" class="form-control mb-2" placeholder="Nama Lengkap"
-                            aria-label="Nama Lengkap" aria-describedby="Nama Lengkap"
-                            oninput="reMasking(this, 'upperCase')">
+                        <input type="text" class="form-control mb-2" placeholder="Nama Lengkap" id="newReg-nama"
+                            autocomplete="off" aria-label="Nama Lengkap" aria-describedby="Nama Lengkap"
+                            oninput="reMasking(this, 'upperCase'); autoNoRM(this.value)">
                         <div>
                             <label for="newReg-gender" class="form-label">Kelamin</label>
                         </div>
                         <div class="btn-group mb-2 w-100" role="group">
                             <input type="radio" class="btn-check" name="newreg-gender" id="newreg-gender-1"
-                                autocomplete="off" checked>
+                                autocomplete="off" checked value="Lelaki">
                             <label class="btn btn-outline-primary" for="newreg-gender-1">Lelaki</label>
                             <input type="radio" class="btn-check" name="newreg-gender" id="newreg-gender-2"
-                                autocomplete="off">
+                                autocomplete="off" value="Perempuan">
                             <label class="btn btn-outline-primary" for="newreg-gender-2">Perempuan</label>
                         </div>
                     </div>
@@ -38,26 +46,31 @@
                         <label for="newReg-ttl" class="form-label">Tanggal Lahir</label>
                         <div class="input-group mb-2">
                             <input type="date" class="form-control" placeholder="Tanggal Lahir"
-                                aria-label="Tanggal Lahir" aria-describedby="Tanggal Lahir">
+                                aria-label="Tanggal Lahir" aria-describedby="Tanggal Lahir"
+                                onchange="ttlToAge_Input(this)" id="newReg-ttl" autocomplete="off">
                             <input type="checkbox" class="btn-check" name="newreg-gender" id="newreg-manual-ttl"
                                 autocomplete="off">
-                            <label class="btn btn-outline-primary" for="newreg-manual-ttl">Manual Usia</label>
+                            <label class="btn btn-outline-primary" for="newreg-manual-ttl">Manual
+                                Usia</label>
                         </div>
                         <div class="row m-0 p-0 ttl-manual-container">
                             <div class="col-4 p-0 m-0 px-1">
                                 <label for="newReg-tahun" class="form-label">Tahun</label>
-                                <input type="number" class="form-control  mb-2" placeholder="Tahun" aria-label="Tahun"
-                                    aria-describedby="Tahun">
+                                <input type="number" oninput="nR_manualToTTL()" class="form-control  mb-2"
+                                    placeholder="Tahun" aria-label="Tahun" id="newReg-tahun" aria-describedby="Tahun"
+                                    min="0" autocomplete="off">
                             </div>
                             <div class="col-4 p-0 m-0 px-1">
                                 <label for="newReg-bulan" class="form-label">Bulan</label>
-                                <input type="number" class="form-control  mb-2" placeholder="Bulan" aria-label="Bulan"
-                                    aria-describedby="Bulan">
+                                <input type="number" oninput="nR_manualToTTL()" class="form-control  mb-2"
+                                    placeholder="Bulan" aria-label="Bulan" id="newReg-bulan" aria-describedby="Bulan"
+                                    min="0" max="11" autocomplete="off">
                             </div>
                             <div class="col-4 p-0 m-0 px-1">
                                 <label for="newReg-hari" class="form-label">Hari</label>
-                                <input type="number" class="form-control  mb-2" placeholder="Hari" aria-label="Hari"
-                                    aria-describedby="Hari">
+                                <input type="number" oninput="nR_manualToTTL()" class="form-control  mb-2"
+                                    placeholder="Hari" aria-label="Hari" id="newReg-hari" aria-describedby="Hari"
+                                    min="0" max="31" autocomplete="off">
                             </div>
                         </div>
                     </div>
@@ -66,7 +79,8 @@
                     <div class="col-12">
                         <label for="newReg-alamat" class="form-label">Alamat</label>
                         <textarea type="text" class="form-control mb-2" placeholder="Alamat" aria-label="Alamat"
-                            style="font-size: 0.8rem;" aria-describedby="Alamat"></textarea>
+                            id="newReg-alamat" autocomplete="off" style="font-size: 0.8rem;"
+                            aria-describedby="Alamat"></textarea>
                     </div>
                 </div>
                 <div class="row m-0">
@@ -78,18 +92,19 @@
                     <div class="col-md-6 col-12">
                         <div class="newReg-title-2 my-2">Ayah</div>
                         <div class="flex-grow-1">
-                            <input type="text" class="form-control mb-2" placeholder="Nama Ayah" id="newReg-ayah-nama">
-
+                            <input type="text" class="form-control mb-2" placeholder="Nama Ayah" id="newReg-ayah-nama"
+                                oninput="reMasking(this, 'upperCase')" autocomplete="off">
                             <input type="text" class="form-control mb-2" placeholder="Pekerjaan Ayah"
-                                id="newReg-ayah-pekerjaan">
+                                id="newReg-ayah-pekerjaan" oninput="reMasking(this, 'upperCase')">
                         </div>
                     </div>
                     <div class="col-md-6 col-12">
                         <div class="newReg-title-2 my-2">Ibu</div>
                         <div class="flex-grow-1">
-                            <input type="text" class="form-control mb-2" placeholder="Nama Ibu" id="newReg-ibu-nama">
+                            <input type="text" class="form-control mb-2" placeholder="Nama Ibu" id="newReg-ibu-nama"
+                                oninput="reMasking(this, 'upperCase')" autocomplete="off">
                             <input type="text" class="form-control mb-2" placeholder="Pekerjaan Ibu"
-                                id="newReg-ibu-pekerjaan">
+                                id="newReg-ibu-pekerjaan" oninput="reMasking(this, 'upperCase')">
                         </div>
                     </div>
                 </div>
@@ -98,26 +113,30 @@
                         <div class="newReg-title-1 my-2">Riw Antro Persalinan</div>
                     </div>
                 </div>
-                <div class="row m-0">
+                <div class="row m-0 mb-5">
                     <div class="col-md-6 col-12">
                         <label for="newReg-uk" class="form-label">Usia Kehamilan</label>
-                        <input id="newReg-uk" type="text" class="form-control mb-2" placeholder="39+1">
+                        <input id="newReg-uk" type="text" class="form-control mb-2" placeholder="39+1"
+                            oninput="reMasking(this, 'uk')" autocomplete="off">
                         <div class="input-deskripsi">
                             <div>
                                 Gunakan format [usia dalam minggu]+[hari]
                             </div>
                         </div>
                         <label for="newReg-bbl" class="form-label">Berat Badan Lahir</label>
-                        <input id="newReg-bbl" type="number" class="form-control mb-2" placeholder="gram">
+                        <input autocomplete="off" id="newReg-bbl" type="number" class="form-control mb-2"
+                            placeholder="gram">
                     </div>
                     <div class="col-md-6 col-12">
                         <label for="newReg-pbl" class="form-label">Panjang Badan Lahir</label>
-                        <input id="newReg-pbl" type="number" class="form-control mb-2" placeholder="cm">
+                        <input id="newReg-pbl" autocomplete="off" type="number" class="form-control mb-2"
+                            placeholder="cm">
                         <label for="newReg-lkl" class="form-label">Lingkar Kepala Lahir</label>
-                        <input id="newReg-lkl" type="number" class="form-control mb-2" placeholder="cm">
+                        <input id="newReg-lkl" autocomplete="off" type="number" class="form-control mb-2"
+                            placeholder="cm">
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </form>
 </div>
