--- a/html/newRegister.html
+++ b/html/newRegister.html
@@ -47,9 +47,8 @@
                         <div class="input-group mb-2">
                             <input type="date" class="form-control" placeholder="Tanggal Lahir"
                                 aria-label="Tanggal Lahir" aria-describedby="Tanggal Lahir"
-                                onchange="ttlToAge_Input(this)" id="newReg-ttl" autocomplete="off">
-                            <input type="checkbox" class="btn-check" name="newreg-gender" id="newreg-manual-ttl"
-                                autocomplete="off">
+                                onchange="newReg_ttlToAge(this)" id="newReg-ttl" autocomplete="off">
+                            <input type="checkbox" class="btn-check" id="newreg-manual-ttl" autocomplete="off">
                             <label class="btn btn-outline-primary" for="newreg-manual-ttl">Manual
                                 Usia</label>
                         </div>
