--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/css/dashboard.css">
     <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="/css/newReg.css">
+    <link rel="stylesheet" href="/css/editPatient.css">
 </head>
 
 <body>
@@ -29,6 +30,7 @@
     <script type="text/javascript" src="script/dashboard.js"></script>
     <script type="text/javascript" src="script/home.js"></script>
     <script type="text/javascript" src="script/newReg.js"></script>
+    <script type="text/javascript" src="script/editPatient.js"></script>
 
     <script src="https://unpkg.com/imask"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
