--- a/html/login.html
+++ b/html/login.html
@@ -3,6 +3,9 @@
     <div class="bg-white p-4 px-4 rounded shadow">
         <div class="h6 mb-4 text-center">Login</div>
         <form class="" onsubmit="return false">
+            <button onclick="dateShow()">ya</button>
+            <input type="text" class="" id="testDate" placeholder="" autocomplete="off"
+                oninput="reMasking(this, 'tanggal')">
             <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="login-username" placeholder="Username" autocomplete="off">
                 <label for="login-username">Username</label>
