--- a/html/editPatient.html
+++ b/html/editPatient.html
@@ -5,9 +5,8 @@
             Edit Data Pasien
         </div>
         <div class="editPat-btn-group">
-            <button type="submit" class="editPat-simpan btn btn-primary" onclick="editPat_Simpan('antri')">Simpan &
-                Antri</button>
-            <button type="submit" class="editPat-simpan btn btn-primary" onclick="editPat_Simpan()">Simpan</button>
+            <button type="submit" class="editPat-simpan btn btn-primary" onclick="editPat_Simpan()">Simpan
+                Perubahan</button>
             <button class="editPat-simpan btn btn-danger" onclick="editPatient()">Reset</button>
             <button class="editPat-simpan btn btn-danger" onclick="">Delete</button>
         </div>
