--- a/html/newRegister.html
+++ b/html/newRegister.html
@@ -7,7 +7,7 @@
         <div class="newReg-btn-group">
             <button type="submit" class="newReg-simpan btn btn-primary" onclick="newReg_Simpan('antri')">Simpan &
                 Antri</button>
-            <button type="submit" class="newReg-simpan btn btn-primary" onclick="newReg_Simpan()">Simpan</button>
+            <button type="submit" class="newReg-simpan btn btn-primary" onclick="newReg_Simpan()">Simpan Baru</button>
             <button class="newReg-simpan btn btn-danger" onclick="NewPatient()">Reset</button>
             <button class="d-none newReg-simpan btn btn-danger" onclick="">Delete</button>
         </div>
@@ -21,7 +21,7 @@
                     </div>
                     <div class="col-6">
                         <label for="newReg-jamAntri" class="form-label">Jam Antrian</label>
-                        <select type="date" class="form-select form-select-sm" id="newReg-jamAntri" autocomplete="off">
+                        <select class="form-select form-select-sm" id="newReg-jamAntri" autocomplete="off">
                             <option value="Pagi" selected>Pagi</option>
                             <option value="Sore">Sore</option>
                         </select>
